--- a/src/app/components/pages/documents/documents.scss
+++ b/src/app/components/pages/documents/documents.scss
@@ -27,7 +27,7 @@
                     font-size: 16px;
                     letter-spacing: .03em;
                     line-height: 1.4;
-                    color: $titleColor;
+                    color: $main-title-color;
                 }
             }
 
@@ -55,7 +55,7 @@
                         font-size: 14px;
                         letter-spacing: .03em;
                         line-height: 1.4;
-                        color: $titleColor;
+                        color: $main-title-color;
                         margin: 0 0 12px;
                     }
 
