--- a/src/app/components/blocks/menu/menu.scss
+++ b/src/app/components/blocks/menu/menu.scss
@@ -17,7 +17,7 @@
 
             font-size: 16px;
             letter-spacing: .03em;
-            color: $titleColor;
+            color: $main-title-color;
 
             transition: all .3s ease;
 
@@ -28,7 +28,7 @@
                 left: 0;
                 width: 100%;
                 height: 1px;
-                background-color: $mainColorMiddle;
+                background-color: $main-middle-color;
             }
 
             &:after {
@@ -40,7 +40,7 @@
                 height: 0;
                 z-index: -1;
 
-                background-color: $mainColorMiddle;
+                background-color: $main-middle-color;
                 transition: all .3s ease;
             }
 
