--- a/src/app/components/blocks/sideMenu/sideMenu.scss
+++ b/src/app/components/blocks/sideMenu/sideMenu.scss
@@ -22,7 +22,7 @@
         border-radius: 50%;
         padding: 3.5px;
 
-        background-color: $mainColorDark;
+        background-color: $main-dark-color;
 
         .line {
             fill:none;
@@ -90,7 +90,7 @@
                 height: 24px;
                 margin-right: 18px;
                 opacity: .8;
-                color: $mainColorMiddle;
+                color: $main-middle-color;
             }
 
             a {
@@ -98,12 +98,12 @@
                 font-size: 14px;
                 letter-spacing: .03em;
                 line-height: 1.4;
-                color: $titleColor;
+                color: $main-title-color;
                 opacity: .8;
 
                 &.current + svg,
                 &:hover + svg {
-                    color: $mainColorDark;
+                    color: $main-dark-color;
                 }
 
                 &.current,
@@ -143,7 +143,7 @@
                     &:before {
                         width: 2px;
                         opacity: 1;
-                        background-color: $mainColorDark;
+                        background-color: $main-dark-color;
                     }
                 }
 
