--- a/src/app/components/pages/home/elements/feedback/form/form.scss
+++ b/src/app/components/pages/home/elements/feedback/form/form.scss
@@ -15,7 +15,7 @@
             font-size: 16px;
             letter-spacing: .03em;
             line-height: 1.4;
-            color: #212121;
+            color: $main-title-color;
         }
 
         label > input,
@@ -41,7 +41,7 @@
                 left: 0;
                 width: 0;
                 height: 1px;
-                background-color: $mainColorDark;
+                background-color: $main-dark-color;
 
                 transition: all .3s ease;
             }
@@ -63,7 +63,7 @@
             font-family: "Roboto-Regular", sans-serif;
             font-size: 14px;
             letter-spacing: .03em;
-            color: #4f4f4f
+            color: #4f4f4f;
         }
     }
 
