--- a/src/app/components/pages/home/elements/news/news.scss
+++ b/src/app/components/pages/home/elements/news/news.scss
@@ -20,7 +20,7 @@
                 transform: scale(1.1);
 
                 &:before {
-                    background-color: rgba($color: $mainColorMiddle, $alpha: 0);
+                    background-color: rgba($color: $main-middle-color, $alpha: 0);
                 }
             }
         }
@@ -49,7 +49,7 @@
                 bottom: 0;
                 right: 0;
                 left: 0;
-                background-color: rgba($color: $mainColorMiddle, $alpha: .3);
+                background-color: rgba($color: $main-middle-color, $alpha: .3);
                 
                 transition: all .3s ease;
             }
@@ -71,7 +71,7 @@
                 h2 {
                     font-size: 16px;
                     letter-spacing: .03em;
-                    color: $titleColor;
+                    color: $main-title-color;
                     margin: 0 0 6px;
                 }
             }
