--- a/src/app/components/pages/home/elements/product/element.scss
+++ b/src/app/components/pages/home/elements/product/element.scss
@@ -11,7 +11,7 @@
             font-size: 16px;
             letter-spacing: .03em;
             line-height: 1.4;
-            color: $textColor;
+            color: $main-text-color;
             margin: 0 0 6px;
         }
 
@@ -44,6 +44,7 @@
     position: relative;
     display: block;
     height: 235px;
+    @include respond-to(height, (235px, 235px, 185px));
     margin: 4px;
     overflow: hidden;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -57,7 +58,7 @@
 
     &:hover {
         &:before {
-            background-color: rgba($color: $mainColorDark, $alpha: .7);
+            background-color: rgba($color: $main-dark-color, $alpha: .7);
         }
 
         .bg {
@@ -76,9 +77,9 @@
         z-index: 1;
 
         background: linear-gradient(45deg,
-            rgba($color: $mainColorDark, $alpha: .8) 0%,
-            rgba($color: $mainColorDark, $alpha: .7) 45%,
-            rgba($color: $mainColorMiddle, $alpha: .7) 100%    
+            rgba($color: $main-dark-color, $alpha: .8) 0%,
+            rgba($color: $main-dark-color, $alpha: .7) 45%,
+            rgba($color: $main-middle-color, $alpha: .7) 100%    
         );
 
         transition: all .3s ease;
@@ -104,9 +105,10 @@
         bottom: 10%;
         z-index: 2;
         margin: 0;
+        @include respond-to(padding-right, (0, 0, 25px));
 
         span {
-            font-size: 16px;
+            @include respond-to(font-size, (16, 16, 14));
             letter-spacing: .03em;
             line-height: 1.4;
             color: #fff;
