--- a/src/app/components/pages/home/elements/services/services.scss
+++ b/src/app/components/pages/home/elements/services/services.scss
@@ -4,14 +4,15 @@
     }
 
     & > li > svg {
-        width: 48px;
-        height: 48px;
+        @include respond-to(width, (48px, 48px, 42px));
+        @include respond-to(height, (48px, 48px, 42px));
+
         color: white;
         margin: 0 0 17px;
     }
 
     & > li > .context > h3 {
-        font-size: 18px;
+        @include respond-to(font-size, (18, 18, 16));
         letter-spacing: .03em;
         line-height: 1.4;
         color: white;
@@ -19,7 +20,7 @@
     }
 
     & > li > .context > p {
-        font-size: 16px;
+        @include respond-to(font-size, (16, 16, 14));
         line-height: 1.4;
         letter-spacing: .03em;
         color: #f1f1f1;
