--- a/src/app/components/pages/leaderships/leaderships.scss
+++ b/src/app/components/pages/leaderships/leaderships.scss
@@ -15,7 +15,7 @@
         bottom: 0;
         width: 25%;
         border-radius: 50px;
-        background-color: $mainColorDark;
+        background-color: $main-dark-color;
         z-index: -1;
         transition: width 400ms ease-in-out;
     }
@@ -36,7 +36,7 @@
     }
 
     .content {
-        color: $titleColor;
+        color: $main-title-color;
         transition: all 400ms ease;
     }
     
