--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -87,7 +87,7 @@ header {
             font-family: "Roboto-Regular", sans-serif;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
-            @include respond-to(font-size, (18, 18, 16));
+            font-size: rem(18);
             line-height: $big-line-height;
             letter-spacing: .0125em;
             text-decoration: inherit;
@@ -104,21 +104,21 @@ header {
         font-family: inherit;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        font-size: 3.75rem;
-        @include respond-to(font-size, (62, 62, 46));
         line-height: $lower-line-height;
         letter-spacing: 0;
         text-decoration: inherit;
         text-transform: inherit;
         color: $main-title-color;
         margin: 0 0 12px;
+        
+        @include responsive(font-size, (62, 46));
     }
     
     > h2 {
         font-family: inherit;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        @include respond-to(font-size, (32, 32, 28));
+        font-size: rem(32);
         line-height: $lower-line-height;
         letter-spacing: -.008em;
         text-decoration: inherit;
@@ -142,7 +142,7 @@ header {
 
     > p {
         font-family: inherit;
-        @include respond-to(font-size, (16, 16, 14));
+        font-size: rem(16);
         line-height: 1.5;
         letter-spacing: 0;
         text-decoration: inherit;
@@ -174,7 +174,7 @@ article.descriptor {
 
     > p {
         font-family: inherit;
-        @include respond-to(font-size, (16, 16, 14));
+        font-size: rem(16);
         line-height: 1.5;
         letter-spacing: normal;
         text-decoration: inherit;
@@ -191,13 +191,14 @@ article.descriptor {
         font-family: inherit;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        @include respond-to(font-size, (16, 16, 14));
         line-height: 1.25rem;
         letter-spacing: .0178571429em;
         text-decoration: none;
         text-transform: none;
         color: $main-text-color;
         opacity: .6;
+
+        @include responsive(font-size, (16, 14));
     }
 }
 
@@ -216,11 +217,12 @@ a._action {
     font-family: 'Roboto-Medium', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    @include respond-to(font-size, (14, 14, 12));
     line-height: inherit;
     letter-spacing: .0892857143em;
     text-transform: uppercase;
     padding: 0 16px 0 16px;
+
+    @include responsive(font-size, (14, 12))
 }
 
 a._contained,
@@ -343,13 +345,14 @@ a._action {
 
 .container {
     position: relative;
-    @include respond-to(padding, ('116px 14.5%', '116px 14.5%', '116px 7.5%'));
     overflow: hidden;
+    
+    @include responsive(padding, ('116px 14.5%', '116px 7.5%'));
 }
 
 section.container,
 article.container {
-    @include respond-to(padding, ('116px 14.5%', '116px 14.5%', '116px 7.5%'));
+    @include responsive(padding, ('116px 14.5%', '116px 7.5%'));
 }
 
 section.item-section {
@@ -378,13 +381,14 @@ article.content {
         font-family: inherit;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        @include respond-to(font-size, (16, 16, 14));
         line-height: 1.5;
         letter-spacing: normal;
         text-decoration: inherit;
         text-transform: inherit;
         color: $main-text-color;
         margin: 0 0 7px;
+
+        @include responsive(font-size, (16, 14));
     }
 
     ul {
@@ -410,7 +414,7 @@ article.content {
 }
 
 article.text {
-    @include respond-to(padding, ('116px 14.5%', '116px 14.5%', '116px 7.5%'));
+    @include responsive(padding, ('116px 14.5%', '116px 7.5%'));
     padding-top: 43px;
 
     p, ul > li {
