--- a/src/public/styles/utils/vars.scss
+++ b/src/public/styles/utils/vars.scss
@@ -3,8 +3,7 @@ $main-font-size: 16px;
 $main-title-size: 18px;
 
 //  Devices sizes
-$large-screen: 1824px;
-$middle-screen: 1224px;
+$note-screen: 1440px;
 
 //  Main Colors
 $default-body-color: #212121;
