--- a/src/app/components/pages/home/elements/product/element.scss
+++ b/src/app/components/pages/home/elements/product/element.scss
@@ -44,12 +44,13 @@
     position: relative;
     display: block;
     height: 235px;
-    @include respond-to(height, (235px, 235px, 185px));
     margin: 4px;
     overflow: hidden;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     cursor: pointer;
-
+    
+    @include responsive(height, (235px, 185px));
+    @include responsive(min-width,(285px, 245px));
     transition: all .3s ease;
 
     &.opacity {
@@ -105,10 +106,10 @@
         bottom: 10%;
         z-index: 2;
         margin: 0;
-        @include respond-to(padding-right, (0, 0, 25px));
+        @include responsive(padding-right, (0, 25px));
 
         span {
-            @include respond-to(font-size, (16, 16, 14));
+            @include responsive(font-size, (16, 14));
             letter-spacing: .03em;
             line-height: 1.4;
             color: #fff;
