--- a/src/app/components/blocks/sideMenu/sideMenu.scss
+++ b/src/app/components/blocks/sideMenu/sideMenu.scss
@@ -58,8 +58,7 @@
     bottom: 0;
     left: 0;
     width: auto;
-    padding: 7% 2%;
-    padding-right: 3%;
+    padding: 114px 54px 114px 36px;
     z-index: 9998;
 
     background-color: #fff;
