--- a/src/app/components/pages/documents/documents.scss
+++ b/src/app/components/pages/documents/documents.scss
@@ -13,6 +13,8 @@
             margin-bottom: 42px;
             padding: 15px 20px;
             max-width: 75%;
+            
+            @include responsive(max-width, (75%, 100%));
 
             transition: all .3s ease;
 
