--- a/src/app/components/pages/products/products.scss
+++ b/src/app/components/pages/products/products.scss
@@ -9,6 +9,7 @@
         min-width: 300px;
         height: 300px;
         box-shadow: 0 3px 6px rgba($color: #000000, $alpha: .16), 0 3px 6px rgba($color: #000000, $alpha: .22);
+        border-radius: 4px;
     
         transition: all .3s ease !important;
         overflow: hidden;
