--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -418,20 +418,20 @@ article.content {
 }
 
 article.text {
-    @include responsive(padding, ('116px 14.5%', '116px 7.5%'));
-    padding-top: 43px;
+    @include responsive(padding, ('42px 14.5% 116px', '42px 7.5% 116px'));
 
     p, ul > li {
         font-family: inherit;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        font-size: 1rem;
         line-height: 1.5;
         letter-spacing: normal;
         text-decoration: inherit;
         text-transform: inherit;
         color: $main-text-color;
         margin: 0 0 7px;
+
+        @include responsive(font-size, (16px, 14px));
     }
 
     img {
