--- a/src/app/components/pages/products-selected/product-selected.scss
+++ b/src/app/components/pages/products-selected/product-selected.scss
@@ -82,7 +82,6 @@
                     font-family: inherit;
                     -webkit-font-smoothing: antialiased;
                     -moz-osx-font-smoothing: grayscale;
-                    font-size: 1rem;
                     line-height: inherit;
                     letter-spacing: inherit;
                     color: #fff;
@@ -124,7 +123,7 @@
                     font-family: inherit;
                     -webkit-font-smoothing: antialiased;
                     -moz-osx-font-smoothing: grayscale;
-                    font-size: 1rem !important;
+                    @include responsive(font-size, (16, 14));
                     line-height: 1.5;
                     letter-spacing: normal;
                     text-decoration: inherit;
@@ -158,7 +157,7 @@
                 }
 
                 & > thead > tr > td {
-                    font-size: 14px !important;
+                    @include responsive(font-size, (16, 14));
                     color: $main-title-color;
                     line-height: 1.4;
                     letter-spacing: .03em;
@@ -197,3 +196,5 @@
         }
     }
 }
+
+@import './preview-mobile/preview-mobile.scss';
