Added mobile menu in products page, added jest config and packages

--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -74,6 +74,14 @@ button {
     border: none;
 }
 
+.top {
+    z-index: 9999 !important;
+}
+
+.pre-top {
+    z-index: 9998 !important;
+}
+
 header {
     position: relative;
     display: block;
