--- a/src/app/components/blocks/sideMenu/sideMenu.scss
+++ b/src/app/components/blocks/sideMenu/sideMenu.scss
@@ -1,11 +1,11 @@
 .toggle-container {
     --top-pos: 5.5%;
-    --left-pos: 3%;
+    --left-pos: 2%;
     
     position: fixed;
     top: var(--top-pos);
     left: var(--left-pos);
-    z-index: 9999;
+    z-index: 9991;
 
     transition: all .3s ease;
 
@@ -23,6 +23,8 @@
         padding: 3.5px;
 
         background-color: $main-dark-color;
+        box-shadow: 1px 6px 10px rgba($color: #000000, $alpha: .22),
+            1px 10px 14px rgba($color: #000000, $alpha: .16);
 
         .line {
             fill:none;
@@ -59,7 +61,7 @@
     left: 0;
     width: auto;
     padding: 114px 54px 114px 36px;
-    z-index: 9998;
+    z-index: 9990;
 
     background-color: #fff;
 
