--- a/src/app/components/pages/products-selected/product-selected.scss
+++ b/src/app/components/pages/products-selected/product-selected.scss
@@ -187,7 +187,12 @@
         }
 
         & > picture {
-            flex: 1 0;
+            @include responsive(flex, ('1 0', '0 0'));
+
+            img {
+                box-shadow: 1px 6px 10px rgba($color: #000000, $alpha: .24),
+                    1px 10px 14px rgba($color: #000000, $alpha: .16);
+            }
         }
 
         .no-image {
